src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwU-dhP0.5-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
